--- a/user/css/style.css
+++ b/user/css/style.css
@@ -18,6 +18,10 @@ header {
     z-index: 999;
 }
 
+header #bars {
+    display: none;
+}
+
 header .menu {
     padding: 0;
 }
@@ -145,45 +149,19 @@ main .products a:hover {
     }
 }
 
-.contact a {
-    color: white;
-    text-decoration: none;
+.form-check-input {
+    cursor: pointer;
 }
 
-.contact {
-    width: 50px;
-    height: 50px;
-    background: #27ae60;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    &::after {
-        content: "";
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-        position: absolute;
-        background-color: #27ae60;
-        z-index: -1;
-        animation: zoomIn 1s backwards infinite;
-    }
+.form-check-label:hover {
+    cursor: pointer;
+    color: rgb(249, 79, 47);
 }
 
-@keyframes zoomIn {
-    from {
-        transform: scale(1);
-        opacity: 0.9;
-    }
-    to {
-        transform: scale(1.5);
-        opacity: 0;
-    }
+.page-link:hover {
+    color: blue;
 }
+
 /*------------------------------------------footer------------------------------*/
 footer {
     background-color: rgb(255, 255, 255);
@@ -233,3 +211,68 @@ footer .wrapper ul li:last-child .dowload-qr img{
     height: 10px;
 }
 
+/* Reponsive */
+@media only screen and (max-width: 768px) {
+    header .nav {
+        display: none !important; 
+    }
+
+    header .menu {
+        justify-content: space-between !important;
+        align-items: center !important;
+    }
+
+    header .menu li {
+        margin-top: 10px;
+        font-size: 16px;
+    }
+
+    header #search-name {
+        width: 300px;
+    }
+
+    header #bars {
+        display: inline-block;
+        font-size: 30px;
+        cursor: pointer;
+        margin-right: 30px;
+        margin-top: 10px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    header .wrapper-1 {
+        font-size: 14px;
+    }
+
+    header .wrapper-2 .logo img {
+        width: 130px;
+        height: 75px;
+    }
+
+    header .wrapper-2 .search #search-name {
+        width: 600px;
+    }
+
+    main .page-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 30px;
+    }
+
+    main #pagination {
+        margin-top: 4px;
+    }
+
+    main #card {
+        width: 100px;
+    }
+    main #list_product {
+        margin: 0 76px;
+    }
+
+    footer .col-2 ul {
+        font-size: 13px;
+    }
+}
